<resources>
    <string name="termsandcondi">By signing up you agree to our \n <u>Privacy policy and terms</u></string>
    <string name="confirm">Confirm</string>
    <string name="_0000">000000</string>
    <string name="_91">+91</string>
    <string name="enter_your_mobile_number">Enter Mobile Number</string>
    <string name="name_of_farmer">Name of Farmer</string>
    <string name="farmer_name">Name</string>
    <string name="pincode">Pincode</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="zone">Zone</string>
    <string name="enter_total_amount">Enter Total Amount</string>
    <string name="select_zone">Select necc zone</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="save">Save</string>
    <string name="_xxx">XXX</string>
    <string name="month_year">MONTH/YEAR</string>
    <string name="item_price">Rs. 00</string>
    <string name="address">Address</string>
    <string name="pay_now">Enquire Now</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="sign_in"> Sign in</string>
    <string name="farm_name">Ex: Ramadhir potery farm</string>
    <string name="passwordhint">******</string>
    <string name="hintemail">\@gmail.com</string>
    <string name="no_of_layer_sheds">No of Layer Sheds</string>
    <string name="no_of_grower_sheds">No of Grower Sheds</string>
    <string name="no_of_broiler_shed">No of Broiler Shed</string>
    <string name="farm_address">Farm Address</string>
    <string name="flat_building_apartment">Flat,building,apartment</string>
    <string name="ex_h_no_123">ex:-H no-123</string>
    <string name="submit">Submit</string>
    <string name="name_of_farm">Name of farm</string>
    <string name="app_name">Pragati Farm Management</string>
    <string name="email_add">Email address</string>
    <string name="Next">Next</string>
    <string name="xxxxxx">xxxxx</string>
    <string name="Culling_Birds">Culling Birds</string>
    <string name="remark">Remark</string>
    <string name="Let_start">Let\'s Start</string>
    <string name="TypeEgg">Type Egg</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City Here</string>
    <string name="total_amount">Total Amount</string>
    <string name="delete">Delete</string>
    <string name="Type">Type</string>
    <string name="enter_building">Enter Building Here</string>
    <string name="loading">Loading…</string>
    <string name="landmark">Landmark</string>
    <string name="FlockName">Flock Name</string>
    <string name="building">Building</string>
    <string name="Street">Street</string>
    <string name="update">Update</string>
    <string name="rate">Rate</string>
    <string name="enter_rate_here">Enter Rate Here</string>
    <string name="enter_Street">Enter Street Here</string>
    <string name="enter_quantity_here">Enter Quantity Here</string>
    <string name="none">None</string>
    <string name="FlockSize">Flock Quantity</string>
    <string name="item_quantity">Quantity</string>
    <string name="flocksnumber">Flock In Number</string>
    <string name="other_product">Other Product</string>
    <string name="BreedName">Breed Name</string>
    <string name="flockAge">Age (Days)</string>
    <string name="add_item">ADD</string>
    <string name="enter_breedname">Enter Breed Name Here</string>
    <string name="home_title1">Egg Rates</string>
    <string name="welcome">Welcome</string>
    <string name="choose_your_language">Choose your Language</string>
    <string name="hindi">हिन्दी</string>
    <string name="english">English</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_otp">Enter your Otp</string>
    <string name="deliver_your_egg">Deliver your egg</string>
    <string name="des_starter_screen">Quisque sit amet sagittis erat. Duis pharetra ornare venenatis. Nulla maximus porta velit ut molestie. Proin quis convallis mauris. In facilisis justo at mi pharetra lobortis. s.</string>
    <string name="skip_step">Skip step</string>
    <string name="next">Next</string>
    <string name="write_remark">Write Remark</string>
    <string name="Add_Medicine">Add Medicine</string>
    <string name="Consumed_Medicine">Consumed Medicine</string>
    <string name="item_name">Item Name</string>
    <string name="total_bird_capacity">Total Active Bird Capacity of Farm</string>
    <string name="bird_number">Bird Number</string>
    <string name="white_eggs">White Eggs</string>
    <string name="Daily_production">Daily Production</string>
    <string name="Bird_Capacity">Bird Capacity</string>
    <string name="brown_egg">Brown Egg</string>
    <string name="Former_Type">Former Type</string>
    <string name="Mannual">Mannual</string>
    <string name="Feed_Mixing_Present">Feed Mixing Present</string>
    <string name="txt_explore_more">Explore more Product</string>
    <string name="Add_Cart">Add to Cart</string>
    <string name="add_address">Add Address</string>
    <string name="Total">Total</string>
    <string name="menu_home">Home</string>
    <string name="Ledger">Ledger</string>
    <string name="Activity_Logs">Activity Logs</string>
    <string name="My_Cart">My Cart</string>
    <string name="FAQs">FAQs</string>
    <string name="Terms_Conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="Setting">Setting</string>
    <string name="Logout">Logout</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_con_password">Confirm Password</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_sell_shop">Sell &amp; Shop</string>
    <string name="menu_My_Farm">My Farm</string>
    <string name="menu_profile">Profile</string>
    <string name="egg_produced">Total Egg Produced</string>
    <string name="broken_egg_prod">Broken Egg Produced</string>
    <string name="broken_egg_in_operation">Broken Egg in Operation</string>
    <string name="total_Morality">Total Morality</string>
    <string name="Feed_Consumed">Feed Consumed</string>
    <string name="have_given_medicine">Have Give any medina to Hen ?</string>
    <string name="add_medicine">" Add Medicine"</string>
    <string name="daily_report">Daily Report</string>
    <string name="iot_report">IOT Report</string>
    <string name="Suggestions">Suggestions</string>
    <string name="select_days">Select Days</string>
    <string name="ScheduleConfirm">Schedule Confirm</string>
    <string name="eligiblity">Eligible For Shipping</string>
    <string name="dropdown">Dropdown</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_terms_condition">Terms and Condition</string>
    <string name="Eggoz_Price">Eggoz Price</string>
    <string name="check_details">Check Details</string>
    <string name="action_notification">Notification</string>
    <string name="action_search">Search</string>
    <string name="Eggoz_vs_necc_price">Eggoz Vs NECC Price</string>
    <string name="payment">Payment</string>
    <string name="_00">00</string>
    <string name="number_of_egg">Numbers of egg</string>
    <string name="card_hint">**** **** **** ****</string>
    <string name="select_city">Select city</string>
    <string name="cart">Cart</string>
    <string name="Expiry_Date_hint">02/21</string>
    <string name="email_add_hint">\@gmail.com</string>
    <string name="Item">Item</string>
    <string name="upload">Upload</string>
    <string name="enter_address">Enter Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eggoz</string>
    <string name="nav_header_subtitle">011 411 93 222</string>
    <string name="action_settings">Settings</string>
    <string name="icon">eggoz icon</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="necc">NECC</string>
    <string name="image">image</string>
    <string name="zerro">0</string>
    <string name="party">Party</string>
    <string name="item_type">Item Type</string>
    <string name="item_type_here">Item Type Here</string>
    <string name="Expenses">Expenses</string>
    <string name="Sale">Sale</string>
    <string name="Day_entry">Day Entry</string>
    <string name="expenses">Expenses</string>
    <string name="Consulting">Consulting</string>
    <string name="menu_feed">Feed</string>
    <string name="area">Area</string>
    <string name="select_your_area">Select Your Area</string>
    <string name="Addfarm">Add farm</string>
    <string name="Shade_Name">Shade Name</string>
    <string name="TotalActiveBirdCapacityofShade">Total Active Bird Capacity of Shade</string>
    <string name="FolkType">Folk Type</string>
    <string name="add_more">Add</string>
    <string name="Vaccination">Vaccination</string>
    <string name="empty">Empty</string>
    <string name="item">Item</string>
    <string name="select_party">Select Party</string>
    <string name="total_active_bird">Total Active Birds</string>
    <string name="Feed_Intake_per_Bird">Feed Intake per Bird</string>
    <string name="HDEP">HDEP</string>
    <string name="Motality">Mortality</string>
    <string name="FarmSummary">Farm Summary</string>
    <string name="order_summary">Order Summary</string>
    <string name="Layer_Name">Layer Name</string>
    <string name="Layer_Type">Type</string>
    <string name="Layer_Type2">Type</string>
    <string name="Capacity">Capacity</string>
    <string name="shadeCapacity">Total shed capacity</string>
    <string name="add_farm">Add Farm</string>
    <string name="farm">Farms</string>
    <string name="Flocks">Flocks</string>
    <string name="shadeFlocks">Flocks</string>
    <string name="Layer_Type_option">Layer Shed/ Grower Shed</string>
    <string name="BirdsNumber">Birds Number</string>
    <string name="No_of_Grower">Broiler Quantity</string>
    <string name="No_of_sheds">Sheds Quantity</string>
    <string name="gm">In Kg</string>
    <string name="AddFlock">Add Flock</string>
    <string name="Add_flock">Add Flock</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="Kadaknath">Kadaknath Egg</string>
    <string name="menu_bazaar">Bazaar</string>
    <string name="blogs">Blogs</string>
    <string name="name">Name</string>
    <string name="shadename">Name</string>
    <string name="totoalbird">Total Bird</string>
    <string name="enter_address_name">Enter Name</string>
    <string name="weight">Weight</string>
    <string name="video">Video</string>
    <string name="na">Na</string>
    <string name="select_farmtype">Select Farm Type</string>
    <string name="select_shed">Select Shed</string>
    <string name="perhunpc">/100Pc</string>
    <string name="Ok">OK</string>
    <string name="backslash">/</string>
    <string name="farm_name2">Farm Name</string>
    <string name="farm_layer_type">Farm Layer Type</string>
    <string name="state">State</string>
    <string name="grower_name">Grower Name</string>
    <string name="total_active_bird_capacity_of_shade">Total Active Bird Capacity of Shade</string>
    <string name="age">Age</string>
    <string name="vaccination">Vaccination</string>
    <string name="helpsupport"><![CDATA[Help & Support]]></string>
    <string name="back">Back</string>
    <string name="helpsupport2">Title</string>
    <string name="alerts">Alerts</string>
    <string name="add_farm_details">Add Farm Details</string>
    <string name="you_didn_t_added_your_farm_until_now_please_add_your_farm_first">You didn\'t added your farm until now Please add your farm first</string>
    <string name="products_populars">Products populars</string>
    <string name="live_iot_report">Live IOT Report</string>
    <string name="enabl_iot_service">Enable IOT Service</string>
</resources>