<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/header1" android:checkableBehavior="single">
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_Expenses"
            android:visible="false"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/Expenses" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_Ledger"
            android:visible="false"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/Ledger" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_Activity_Logs"
            android:visible="false"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/Activity_Logs" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_My_Cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/My_Cart" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_side_Summary"
            android:visible="false"
            android:icon="@drawable/ic_baseline_summarize_24"
            android:title="@string/FarmSummary" />
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_order_summary"
            android:visible="false"
            android:icon="@drawable/ic_baseline_track_changes_24"
            android:title="@string/order_summary" />
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_side_consulting"
            android:icon="@drawable/ic_baseline_content_paste_24"
            android:title="@string/Consulting" />

    </group>
    <group android:id="@+id/header2" android:checkableBehavior="single">

        <item
            android:orderInCategory="1"
            android:id="@+id/nav_side_FAQs"
            android:icon="@drawable/ic_baseline_error_outline_24"
            android:title="@string/FAQs" />

        <item
            android:orderInCategory="1"
            android:id="@+id/nav_side_Setting"
            android:visible="false"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/Setting" />
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_side_help_support"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/helpsupport" />



    </group>
    <group android:id="@+id/header3" android:checkableBehavior="single">

        <item
            android:orderInCategory="2"
            android:id="@+id/nav_side_Logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/Logout" />
        <item
            android:orderInCategory="2"
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false"/>
    </group>
</menu>