<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:visible="false"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_sell_shop"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_bazaar" />
        <item
            android:id="@+id/nav_daily_input"
            android:icon="@drawable/ic_baseline_system_update_alt_24"
            android:title="@string/menu_My_Farm" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_baseline_rss_feed_24"
            android:title="@string/menu_feed" />
    </group>
</menu>