<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="never|ifRoom|withText" />
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        android:visible="false"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_top_My_Cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24w"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/My_Cart" />
    <item
        android:id="@+id/nav_lang"
        android:icon="@drawable/language"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/choose_your_language" />
</menu>