<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="40sp"
        android:paddingLeft="40sp"
        android:paddingTop="40sp"
        android:background="@color/white"
        tools:context=".ui.profile.AddGrowerFragment">
        <TextView
            android:id="@+id/txt_GrowerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansregular"
            android:gravity="start"
            android:text="@string/grower_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_GrowerName_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_GrowerName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_GrowerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_name"
                android:lines="1"
                android:maxLength="20"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txt_total_bird_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensansregular"
            android:textSize="14sp"
            android:gravity="start"
            android:text="@string/total_active_bird_capacity_of_shade"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_GrowerName_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_total_bird_capacity_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_total_bird_capacity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_total_bird_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_bird_capacity"
                android:lines="1"
                android:maxLength="8"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensansregular"
            android:textSize="14sp"
            android:gravity="start"
            android:text="@string/age"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_total_bird_capacity_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_age_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="3"
                android:hint="@string/flockAge"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_Vaccination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:gravity="start"
            android:text="@string/vaccination"
            android:fontFamily="@font/opensansregular"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_age_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_Vaccination_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Vaccination">

            <AutoCompleteTextView
                android:id="@+id/edt_Vaccination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Vaccination"
                android:clickable="false"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            app:cardBackgroundColor="@color/app_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Vaccination_layout"
            app:layout_constraintVertical_bias="1.0"
            android:focusable="true">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/opensansbold"
                android:padding="16dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>